Lock sign removed valign middle, fix of work subscriptions

--- a/source/styles/styles.css
+++ b/source/styles/styles.css
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, ul, li, p {
 }
 
 img {
-	vertical-align: middle;
+	/* vertical-align: middle; */
 	width: 100%;
 	height: auto;
 	border-width: 0;
